# weather

./: CMakeLists.txt  README.md  compile_commands.json  main.cpp  main.qml  resources.qrc  weather.desktop
